alignrment  fixed

--- a/src/component/shirtEditor/shirtEditor.module.scss
+++ b/src/component/shirtEditor/shirtEditor.module.scss
@@ -2,13 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
 }
 
 .img_wrap {
   position: relative;
-  width: 500px;
-  height: 600px;
 }
 .mainImage {
   object-fit: contain;
